style.css
*{
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
    margin: 0;
      font-family: "Roboto", sans-serif;
    font-optical-sizing: auto;
    font-weight: 100;
}
/* .roboto{
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
  font-variation-settings: "wdth" 100;
*/

/* Generic styles */
.dark_background{
    background-color: #1F2937;
}
.hero_main{
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
}
.hero_secondary{
    font-size: 18px;
    color: #E5E7EB;
    font-weight: 350;
}
.hero_logo_text{
    font-size: 24px;
    color: #F9FAF8;
}

.call_to_action{
    background-color: #3882F6;
    color: #E5E7EB;
    font-weight: 700;
    border-radius: 5px;
    padding: 4px 15px 4px 15px;
    border: 0px;
}

.information_header_text{
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.quote_background{
    background-color: #E5E7EB;
}

.quote_text{
    font-size: 36px;
    color: #1F2937;
    font-weight: 300;

}

/* End of generic styles */

.wrapper{
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.first_layer_wrapper{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0px 150px 100px 150px;
}

.header{
    display:flex;
    justify-content: flex-start;
    align-items: center;
    margin-top: 10px;
}

.header img{
    width: 100px;
    height: auto;
    flex: 0 0 10px;
}
.pushblock{
    flex: 1;
}

.header-links a{
    color: white;
    padding: 4px;
    margin: 4px;
    font-weight: 300;
}

.first-layer{
    display:flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.first-layer .container{
    display:flex;
    flex-direction: column;
    align-items: flex-start;
    flex: 1;
    
}

.first-layer button{
    margin-top: 8px;
    padding: 5px 24px 5px 24px;
}

.first-layer img{
    width: 500px;
    height: auto;
}

.second-layer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
        margin: 40px 200px;
    background-color: #ffffff;
}

.second-layer .container{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 40px;
    gap: 40px;
}

.second-layer img{
    border-radius: 5px;
    width: 200px;
    height: auto;
}
.second-layer figcaption{
    font-size: 18px;
}

.third-layer .container{
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 100px 200px;
}
.quote_name{
    align-self: flex-end;
    font-size: 36px;
    color: #1F2937;
    font-weight: 500;
}

.fourth-layer{
    display: flex;
    justify-content: space-around;
    align-items: center;

    margin: 50px 200px;
}

.fourth-layer .container{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 20px 0px;
}
.fourth-layer button {
    border: 1px solid white;
}

.footer{
    display: flex;
    justify-content: center;
}
.footer p{
    margin: 20px;
    font-weight: 400;
}

